Validar os Campos do Form
Iniciando a configuração para que o formulário não seja enviado para o Banco sem todos os dados digitados.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cadastro do Filho</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/css/style.css">
+    <link rel="stylesheet" href="bootstrap/js/formulario.js">
 </head>
 <body>
 
@@ -15,8 +16,9 @@
                 <div class="card">
                     <div class="card-body">
                         
-                        <form id="form-contato">
+                        <form id="form-contatos">
                             <h1>Cadastro do Aluno</h1>
+                            <p1>Agora precisamos das informações do seu filho.</p1>
                             <div class="form-group">
                                 <label>Nome do Aluno</label>
                                 <input type="text" class="form-control" name="nome_aluno"  id="nome_aluno" aria-describedby="emailHelp" placeholder="Digite o Nome do Aluno">
@@ -24,7 +26,7 @@
                             </div>
                                 <div class="form-row">
                                     <div class="col">
-                                        <label>Data de Nascimento</label>
+                                        <label>Idade do Aluno</label>
                                         <input type="text" class="form-control" name="data_nascimento_aluno"  id="data_nascimento_aluno" aria-describedby="emailHelp">
                                     </div>
                                     <div class="col">
@@ -37,8 +39,8 @@
                                     <input type="text" class="form-control" name="escola"  id="escola" aria-describedby="emailHelp">
                             </div>
                             <div class="form-group">
-                                <label>Nome do Responsavel</label>
-                                <input type="text" class="form-control" name="responsavel"  id="responsavel" aria-describedby="emailHelp">
+                                <label>CEP da Escola</label>
+                                <input type="text" class="form-control" name="cep-escola"  id="cep-escola" aria-describedby="emailHelp">
                             </div>
                             
                             <div class="form-group">
@@ -60,9 +62,9 @@
 </div>     
 
 
-<script src=".../bootstrap/js/jquery-3.5.1.slim.min.js"></script>
-<script src=".../bootstrap/js/bootstrap.min.js"></script>
-<script src=".../bootstrap/js/formulario.js"></script>
+<script src="bootstrap/js/jquery-3.5.1.slim.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="bootstrap/js/contato.js"></script>
 
 </body>
 </html>
